syntax = "proto3";

package protos;

import "protos/customer.proto";

service SalonService {
    rpc CreateSalon(Salon) returns (Salon);
}

message Salon {
    string id = 1;
    string name = 2;
    string phone_number = 3;
    string email = 4;
    int32 rating = 5;
    string address = 6;
    string latitude = 7;
    string longitude = 8;
    string start_time = 9;
    string end_time = 10;
    string image_url = 11;
    string created_at = 12;
    string updated_at = 13;
    string deleted_at = 14;
}

message GetSalonsParams {
	int64 page = 1;
	int64 limit = 2;
	string search = 3;
}

message AllSalons {
    repeated Salon salons = 1;
    int64 count = 2;
}